# ResourceManager

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  LinesLoader.cpp  LinesLoader.h  Model.cpp  Model.h  MyExceptions.h  Observer.h  ProgressBar.cpp  ProgressBar.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  Subject.h  main.cpp  prova.txt
UnitTesting/: CMakeLists.txt  MockProgressBar.cpp  MockProgressBar.h  ResourceLoaderFixture.cpp  ResourceLoaderTest.cpp
UnitTesting/lib/googletest/: README.md
UnitTesting/lib/googletest/docs/: advanced.md
